--- a/test.html
+++ b/test.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Test</title>
+<script src="https://unpkg.com/@microsoft/teams-js@1.4.2/dist/MicrosoftTeams.min.js" integrity="sha384-DcoNUuQTjpW5Sw3msonn/2ojgtNvtC5fCGd5U9RUpL3g1hla1LzHz8I9YIYSXe6q" crossorigin="anonymous"></script>
 </head>
 
 <body>
