--- a/test.html
+++ b/test.html
@@ -4,10 +4,14 @@
 <meta charset="UTF-8">
 <title>Test</title>
 <script src="https://unpkg.com/@microsoft/teams-js@1.4.2/dist/MicrosoftTeams.min.js" integrity="sha384-DcoNUuQTjpW5Sw3msonn/2ojgtNvtC5fCGd5U9RUpL3g1hla1LzHz8I9YIYSXe6q" crossorigin="anonymous"></script>
+<script>
+
+</script>
 </head>
 
 <body>
 <h1>Hello world!</h1>
+<p>This is my teams test app</p>
 </body>
 
 </html>
